crates/anodized/tests/compile-fail/contract-on-struct.rs
use anodized::contract;

#[contract(ensures: true)]
struct S;

fn main() {}
