crates/anodized/tests/compile-fail/contract-on-struct.stderr
error: The `#[contract]` attribute doesn't yet support this item: `struct`.
       If this is a problem for your use case, please open a feature
       request at https://github.com/mkovaxx/anodized/issues/new
 --> tests/compile-fail/contract-on-struct.rs:4:1
  |
4 | struct S;
  | ^^^^^^^^^
